--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -559,6 +559,7 @@
     "HairType.mediumMaleCenterPart": "Medium Length Center Part",
     "HairType.mediumLengthFemaleStraight": "Medium Length Straight",
     "HairType.chinLengthCombBack": "Chin Length Straight Comb Back",
+    "HairType.shavedSides": "Shaved Sides",
     "HairType.shortTeasedOverEyeStyle": "Short, Teased, Over-Eye",
     "HairType.feminineDreadStyle": "Feminine Dread Style",
     "HairType.shoulderLengthMostlyStraight": "Shoulder Length Mostly Straight",
@@ -667,8 +668,8 @@
     "Rank.commander.name": "Commander",
     "Rank.commander.abbrev": "Cmdr.",
 
-    "Rank.lieutenantCommander.name": "Lt. Commander",
-    "Rank.lieutenantCommander.abbrev": "LCdr.",
+    "Rank.ltCommander.name": "Lt. Commander",
+    "Rank.ltCommander.abbrev": "LCdr.",
 
     "Rank.lieutenant.name": "Lieutenant",
     "Rank.lieutenant.abbrev": "Lt.",
@@ -717,8 +718,16 @@
     "ShipBuildType.starship.name": "Starship",
 
     "Species.andorian.name": "Andorian",
+    "Species.andorian.aboutNames": "Andorian names tend to be somewhat harsh-sounding, and have a personal name followed by a clan name. Amongst some Andorians, it’s common to begin the clan name with a gender-specific prefix: 'zh' or 'sh' for females, and 'ch' or 'th' for males. This is placed before the family name, separated by an apostrophe. Longer or more complicated Andorian names are commonly shortened, especially when dealing with other species. Examples: Ishrelia zh’Azonan (female), Atheth th’Zynes(male)",
+    "Species.andorian.description": "An aggressive, passionate people from the frozen moon Andoria, the Andorians have been part of the United Federation of Planets since its foundation, having been firm allies of Humanity for several years beforehand. Their blue skin, pale hair, and antennae give them a distinctive appearance, and while the Andorian Imperial Guard was demobilized when the Federation was founded, they still maintain strong military traditions, and a tradition of ritualized honor-duels known as Ushaan, using razorsharp ice-mining tools.",
+    "Species.andorian.exampleValue": "Proud Son/Daughter of Andoria",
+    "Species.andorian.traitDescription": "This trait may reduce the Difficulty of Tasks to resist extreme cold, or Tasks impacted by extremely low temperatures. Their antennae aid in balance and spatial awareness; a lost antenna can be debilitating until it regrows. Andorians also have a high metabolism, meaning, amongst other things, that they tire more quickly than Humans; this also makes them more vulnerable to infection from certain types of injury. Before the Federation, Andorians and Vulcans had numerous disputes; though these issues are largely considered to be ancient history, Andorians and Vulcans don’t always get along.",
 
     "Species.bajoran.name": "Bajoran",
+    "Species.bajoran.aboutNames": "Bajoran names begin with the family name, followed by a personal name. The individual names are normally short — rarely more than two syllables — and with a soft or melodic sound. Bajor Is traditionally matriarchal, with children taking their mother’s family name. Examples: Reil Yesa (female), Latara Gel (male)",
+    "Species.bajoran.description": "A spiritual, dauntless people from the planet Bajor, the Bajorans have lost much after decades of occupation by the Cardassian Union. Many Bajorans were scattered across the Alpha Quadrant during the occupation, while those who remained on Bajor often acted as insurgents or toiled in labor camps under Cardassian rule. The occupation ended a few years ago, but the scars it left will take generations to heal. Bajor is not a member of the Federation, but many Bajorans scattered by the diaspora have found their way into Starfleet. Bajoran culture places a strong belief in the Prophets, celestial beings who are said to have watched over Bajor for millennia; modern religious doctrine states that the Bajoran Wormhole is the Prophets’ Celestial Temple.",
+    "Species.bajoran.exampleValue": "Faith in the Prophets",
+    "Species.bajoran.traitDescription": "For obvious reasons, Bajorans tend to be hostile towards Cardassians, and resentful of those who are dismissive of, or turned a blind eye to, the suffering of the Bajoran people. While not all Bajorans are spiritual or religious to the same degree, most have a cultural understanding of the Prophets’ place in Bajoran society.",
 
     "Species.betazoid.name": "Betazoid",
 
@@ -733,6 +742,10 @@
     "Species.ferengi.name": "Ferengi",
 
     "Species.human.name": "Human",
+    "Species.human.aboutNames": "Human names vary wildly, and rather than make sweeping generalizations here, it’s better that Players seek out other sources for names, considering the vast range of languages, cultures, and traditions Humanity encompasses.",
+    "Species.human.description": "Originating on the planet Earth in the Sol system, Humans are a resilient, diverse, and adaptable species, who developed from fractious, warring nations on the brink of mutual annihilation to a united, peaceful society in less than a century, and managed to forge alliances between former enemies within a century of achieving interstellar space flight. Earth is a founder and pivotal member of the United Federation of Planets, and many of the Federation’s institutions can be found on Earth. Humans often exhibit a dichotomy in their nature — being both driven to strong emotion and careful reason — and while they have largely grown beyond their warlike and divisive past, their drive and capacity for aggression are as much a part of their success as their curiosity and analytical minds.",
+    "Species.human.exampleValue": "The Drive for Exploration",
+    "Species.human.traitDescription": "Humans are adaptable and resilient, and their resolve and ambition often allow them to resist great hardship and triumph despite great adversity. However, Humans can also be reckless and stubborn, irrational, and unpredictable.",
 
     "Species.klingon.name": "Klingon",
 
@@ -761,7 +774,10 @@
     "StarSystem.common.primaryStar": "Primary Star",
     "StarSystem.common.companionStar": "Companion Star",
 
+    "UniformEra.enterprise": "Enterprise",
     "UniformEra.originalSeries": "Original Series",
+    "UniformEra.originalSeriesKlingon": "Klingon (Original Series)",
+    "UniformEra.klingon": "Klingon Armor",
     "UniformEra.monsterMaroon": "The Wrath of Khan",
     "UniformEra.dominionWar": "Dominion War",
 
