--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -26,18 +26,18 @@ TokenCreator.section.species,Species,Spezies,,
 TokenCreator.section.species.options,Options,Optionen,,
 TokenCreator.section.body,Body,Körper,,
 TokenCreator.section.body.uniform,Uniform Type,Uniformtyp,,
-TokenCreator.section.body.colour,Division Color,Abteilungsfarbe,,
+TokenCreator.section.body.colour,Division Colour,Abteilungsfarbe,,
 TokenCreator.section.body.rank,Rank,Rang,,
 TokenCreator.section.body.type,Body Type,Körpertyp,,
 TokenCreator.section.head,Head,Kopf,,
-TokenCreator.section.head.colour,Skin Color,Hautfarbe,,
+TokenCreator.section.head.colour,Skin Colour,Hautfarbe,,
 TokenCreator.section.head.shape,Head Shape,Kopfform,,
 TokenCreator.section.hair,Hair,Haar,,
-TokenCreator.section.hair.colour,Hair Color,Haarfarbe,,
+TokenCreator.section.hair.colour,Hair Colour,Haarfarbe,,
 TokenCreator.section.hair.style,Hair Style,Frisur,,
 TokenCreator.section.mouth,Mouth,Mund,,
 TokenCreator.section.mouth.shape,Mouth,Mundform,,
-TokenCreator.section.mouth.colour,Lipstick Color,Lippenstiftfarbe,,
+TokenCreator.section.mouth.colour,Lipstick Colour,Lippenstiftfarbe,,
 TokenCreator.section.mouth.moustache,Moustache,Schnurrbart,,
 TokenCreator.section.mouth.beard,Beard,Bart,,
 TokenCreator.section.nose,Nose,Nase,,
@@ -45,7 +45,7 @@ TokenCreator.section.nose.shape,Nose Shape,Nasenform,,
 TokenCreator.section.nose.nasoLabial,Naso-Labial Folds,Nasenlippenfurche,,
 TokenCreator.section.eyes,Eyes,Augen,,
 TokenCreator.section.eyes.style,Eye Style,Augenstil,,
-TokenCreator.section.eyes.colour,Eye Color,Augenfarbe,,
+TokenCreator.section.eyes.colour,Eye Colour,Augenfarbe,,
 TokenCreator.section.extras,Extras,Extras,,
 TokenCreator.section.extras.ears,Ears,Ohren,,
 TokenCreator.section.extras.forehead,Forehead,Stirn,,
@@ -638,7 +638,7 @@ StarSystem.common.companionStar,Companion Star,Begleitstern,,Etoile Binaire
 UniformEra.enterprise,Enterprise,,,
 UniformEra.originalSeries,Original Series,Originalserie,,
 UniformEra.originalSeriesKlingon,Klingon (Original Series),,,
-UniformEra.klingon,Klingon Armor,,,
+UniformEra.klingon,Klingon Armour,,,
 UniformEra.monsterMaroon,The Wrath of Khan,Der Zorn des Khan,,
 UniformEra.dominionWar,Dominion War,Dominionkrieg,,
 Value.environment.text,"This Value should reflect the environment and culture the character was raised within. This is a good opportunity to consider how the character views their own culture, and how they connect — or possibly, don’t connect — to the philosophies and traditions of their people.","Diese Überzeugung sollte die Herkunft und die Kultur des Charakters, in der er oder sie aufgewachsen ist, widerspiegeln. Dies ist eine gute Gelegenheit, sich darüber Gedanken zu machen, wie der Charakter seine oder ihre eigene Kultur sieht und wie er oder sie zu den Philosophien und Traditionen der Vorfahren steht.",,Cette valeur doit refléter l'environnement et la culture dans lesquels le personnage a été élevé. C'est une bonne occasion d'examiner comment le personnage perçoit sa propre culture et comment il se rattache- ou peut-être ne se rattache pas - aux philosophies et aux traditions de son peuple.
