initial work on uniform variant support; - break out Monster Maroon uniform into a uniform pack, with the expectation that we might get to a place where we want to load uniforms lazily.

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -39,6 +39,7 @@
     "TokenCreator.section.body.colour": "Division Colour",
     "TokenCreator.section.body.rank": "Rank",
     "TokenCreator.section.body.type": "Body Type",
+    "TokenCreator.section.body.uniformVariant": "Uniform Variant",
 
     "TokenCreator.section.head": "Head",
 
