--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -29,6 +29,7 @@ TokenCreator.section.body.uniform,Uniform Type,Uniformtyp,,
 TokenCreator.section.body.colour,Division Colour,Abteilungsfarbe,,
 TokenCreator.section.body.rank,Rank,Rang,,
 TokenCreator.section.body.type,Body Type,Körpertyp,,
+TokenCreator.section.body.uniformVariant,Uniform Variant,,,
 TokenCreator.section.head,Head,Kopf,,
 TokenCreator.section.head.colour,Skin Colour,Hautfarbe,,
 TokenCreator.section.head.shape,Head Shape,Kopfform,,
