--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -712,6 +712,30 @@
     "Rank.crewman3rdClass.name": "Crewman 3rd Class",
     "Rank.crewman3rdClass.abbrev": "Crew.",
 
+    "Spaceframe.akira": "Akira Class",
+    "Spaceframe.ambassador": "Ambassador Class",
+    "Spaceframe.centaur": "Centaur Class",
+    "Spaceframe.constellation": "Constellation Class",
+    "Spaceframe.constitution": "Constitution Class",
+    "Spaceframe.daedalus": "Daedalus Class",
+    "Spaceframe.defiant": "Defiant Class",
+    "Spaceframe.excelsior": "Excelsior Class",
+    "Spaceframe.galaxy": "Galaxy Class",
+    "Spaceframe.hermes": "Hermes Class",
+    "Spaceframe.intrepid": "Intrepid Class",
+    "Spaceframe.luna": "Luna Class",
+    "Spaceframe.miranda": "Miranda Class",
+    "Spaceframe.nebula": "Nebula Class",
+    "Spaceframe.newOrleans": "New Orleans Class",
+    "Spaceframe.norway": "Norway Class",
+    "Spaceframe.nova": "Nova Class",
+    "Spaceframe.oberth": "Oberth Class",
+    "Spaceframe.olympic": "Olympic Class",
+    "Spaceframe.saber": "Saber Class",
+    "Spaceframe.sovereign": "Sovereign Class",
+    "Spaceframe.steamrunner": "Steamrunner Class",
+    "Spaceframe.sydney": "Sydney Class",
+
     "ShipBuildType.pod.name": "Pod",
 
     "ShipBuildType.shuttlecraft.name": "Shuttle",
