- tweaks to mine effects

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -718,27 +718,39 @@
 
     "Spaceframe.akira": "Akira Class",
     "Spaceframe.ambassador": "Ambassador Class",
+    "Spaceframe.archer": "Archer Class",
+    "Spaceframe.cardenas": "Cardenas Class",
     "Spaceframe.centaur": "Centaur Class",
     "Spaceframe.constellation": "Constellation Class",
     "Spaceframe.constitution": "Constitution Class",
+    "Spaceframe.crossfield": "Crossfield Class",
     "Spaceframe.daedalus": "Daedalus Class",
     "Spaceframe.defiant": "Defiant Class",
+    "Spaceframe.engle": "Engle Class",
     "Spaceframe.excelsior": "Excelsior Class",
     "Spaceframe.galaxy": "Galaxy Class",
     "Spaceframe.hermes": "Hermes Class",
+    "Spaceframe.hiawatha": "Hiawatha Class",
+    "Spaceframe.hoover": "Hoover Class",
     "Spaceframe.intrepid": "Intrepid Class",
     "Spaceframe.luna": "Luna Class",
+    "Spaceframe.magee": "Magee Class",
+    "Spaceframe.malachowski": "Malachowski Class",
     "Spaceframe.miranda": "Miranda Class",
     "Spaceframe.nebula": "Nebula Class",
     "Spaceframe.newOrleans": "New Orleans Class",
+    "Spaceframe.nimitz": "Nimitz Class",
     "Spaceframe.norway": "Norway Class",
     "Spaceframe.nova": "Nova Class",
+    "Spaceframe.nX": "NX Class",
     "Spaceframe.oberth": "Oberth Class",
     "Spaceframe.olympic": "Olympic Class",
     "Spaceframe.saber": "Saber Class",
+    "Spaceframe.shepard": "Shepard Class",
     "Spaceframe.sovereign": "Sovereign Class",
     "Spaceframe.steamrunner": "Steamrunner Class",
     "Spaceframe.sydney": "Sydney Class",
+    "Spaceframe.walker": "Walker Class",
 
     "ShipBuildType.pod.name": "Pod",
 
