- chin-length bob, new build

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -553,6 +553,7 @@
 
     "HairType.bald": "Bald",
     "HairType.bowlCutHair": "Bowl Cut",
+    "HairType.chinLengthBob": "Chin Length Bob",
     "HairType.stylishHair": "Stylish Short",
     "HairType.sidePart": "Side Part",
     "HairType.shortAfro": "Short Curly",
